------------------------------------------------------------------------
r432 | gaser | 2020-01-16 22:28:46

Changed paths:
A  +    CHANGES.txt
M       Lib/CAT_Complexity.c
M       Lib/CAT_Defect.c

(1) Fixed: Corrected bug in CAT_Complexity.c where an object was removed
    incorrectly that cause a crash. 
(2) Changed: Added change from last revision in CAT_Defects.c again.
------------------------------------------------------------------------
r431 | gaser | 2020-01-14 08:34:27 +0100 (Di, 14 Jan 2020) | 12 lines

Changed paths:
M       Lib/CAT_Complexity.c
M       Lib/CAT_Curvature.c
M       Lib/CAT_Defect.c
M       Lib/CAT_Gyrification.c
M       Lib/CAT_SPH.c
M       Progs/CAT_DumpGyrificationIndex.c
M       Progs/CAT_FractalDimension.c
!       stamp-h1

Changed: Added or replaced delete_object_list call where needed.

------------------------------------------------------------------------
r430 | gaser | 2020-01-13 18:30:01 +0100 (Mo, 13 Jan 2020) | 50 lines

Changed paths:
D       CHANGES.txt
M       INSTALL
D       Include/conjugate.h
D       Include/fit_3d.h
        > moved to not_used_anymore/fit_3d.h
D       Include/fit_3d_prototypes.h
        > moved to not_used_anymore/fit_3d_prototypes.h
M       Lib/CAT_Curvature.c
M       Lib/CAT_Defect.c
D       Lib/CAT_LaplaceBeltrami.c
        > moved to not_used_anymore/CAT_LaplaceBeltrami.c
M       Lib/CAT_SPH.c
D       Lib/CAT_SelfIntersect.c
        > moved to not_used_anymore/CAT_SelfIntersect.c
M       Lib/CAT_Topology.c
M       Makefile.am
D       Progs/CAT_FixSelfIntersect.c
        > moved to not_used_anymore/CAT_FixSelfIntersect.c
D       Progs/CAT_LBConformalMap.c
        > moved to not_used_anymore/CAT_LBConformalMap.c
M       Progs/Makefile.am
M       depcomp
M       mkinstalldirs
D       nl
        > moved to not_used_anymore/nl
A       not_used_anymore
A  +    not_used_anymore/CAT_FixSelfIntersect.c
        > moved from Progs/CAT_FixSelfIntersect.c
A  +    not_used_anymore/CAT_LBConformalMap.c