@@ -1,5 +1,15 @@
 ------------------------------------------------------------------------
-r432 | gaser | 2020-01-16 22:28:46
+r433 | gaser | 2020-01-16 22:40:16
+
+Changed paths:
+M       CHANGES.txt
+M       Lib/CAT_Defect.c
+MM      not_used_anymore/CAT_MarchingCubesSphere.c
+ M      not_used_anymore/conjugate.h
+
+Changed: Corrected use of delete_object_list.
+------------------------------------------------------------------------
+r432 | gaser | 2020-01-16 22:29:02 +0100 (Do, 16 Jan 2020) | 9 lines
 
 Changed paths:
 A  +    CHANGES.txt
@@ -9,6 +19,7 @@ M       Lib/CAT_Defect.c
 (1) Fixed: Corrected bug in CAT_Complexity.c where an object was removed
     incorrectly that cause a crash. 
 (2) Changed: Added change from last revision in CAT_Defects.c again.
+
 ------------------------------------------------------------------------
 r431 | gaser | 2020-01-14 08:34:27 +0100 (Di, 14 Jan 2020) | 12 lines
 
